--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
                     <li>press the button</li>
                     <li>Move the block with left/right arrows</li>
                     <li>Collect 5 blocks in one horizontal row</li>
-                    <li>Every row gives you 10 point</li>
+                    <li>Every row gives you 5 point</li>
                 </ul>
                 <div class="score-field text-center">
                     <span>Your scores:</span><span class="scores">0</span>
                 </div>
+                <div class="form"></div>
             </div>
         </main>
     </div>
