--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
     <div class="container">
         <header>
             <h1 class="text-center">
-                Tetris
+                Simple Tetris
             </h1>
+            <p class="header-description text-center">sorry, but your screen width doesnt support</p>
         </header>
         <main>
             <div class="block tetris-block">
@@ -26,25 +27,23 @@
                 </div>
             </div>
             <div class="block text-field">
-                <button class="start">Try it</button>
-                <ul class="rules">
+                <div class = "start-block">
+                    <button class="start">Lets start</button>
+                </div>
+                <ul class="rules text-center">
                     <li>press the button</li>
                     <li>Move the block with left/right arrows</li>
-                    <li>Collect 5 blocks in one horizontal row</li>
+                    <li>Collect 3 blocks in one horizontal row</li>
                     <li>Every row gives you 5 point</li>
                 </ul>
                 <div class="score-field text-center">
-                    <span>Your scores:</span><span class="scores">0</span>
+                    <span>Total scores: </span><span class="scores">0</span>
                 </div>
-                <div class="form"></div>
+                <div class="form">
+                </div>
             </div>
         </main>
     </div>
-
-    <div class="a">
-
-    </div>
-
     <script src="js/main.js"></script>
 </body>
 </html>
